[ADD] helper and README

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 GOERLI_RPC_URL='https://alchemy.infura.io/v3/1234567890'
-PRIVATE_KEY='abcdefg'
+SEPOLIA_RPC_URL="https://eth-sepolia.alchemyapi.io/v2/your-api-key"
 MAINNET_RPC_URL="https://eth-mainnet.alchemyapi.io/v2/your-api-key"
+PRIVATE_KEY='efEA....1de'
+
 REPORT_GAS=true
 ETHERSCAN_API_KEY="YOUR_KEY"
 COINMARKETCAP_API_KEY="YOUR_KEY"
